van valami forma

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <script src="snap.svg.js" type="text/javascript" charset="utf-8"></script>
 <script src="toxiclibs.js" type="text/javascript" charset="utf-8"></script>
+<script src="geometricFunctions.js" type="text/javascript" charset="utf-8"></script>
 
 <style type="text/css" media="all">
 #drawing {
@@ -21,7 +22,7 @@
 	stroke: #000;
 }
 svg text {
-	display: none;
+//	display: none;
 
 	font-size:2px;
 	stroke-width:0.1;
