--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <style type="text/css" media="all">
 #drawing {
 	height: 100%;
-	width: 100%;
+	width: 50%;
 	fill: #000;
 	stroke: #000;
 }
@@ -38,6 +38,20 @@ svg g:hover text {
 <body>
 
 <svg id="drawing" width=800 height=800></svg>
+
+<pre>
+<label for="testmagassag">testmagassag <input type="range" min=0 max=200 value=170 id="testmagassag"></label>
+<label for="mellboseg">mellbőség <input type="range" min=80 max=150 value=100 id="mellboseg"></label>
+<label for="derekboseg">derékbőség <input type="range" min=50 max=100 value=88 id="derekboseg"></label>
+<label for="csipoboseg">csípőbőség <input type="range" min=70 max=180 value=106 id="csipoboseg"></label>
+<label for="derekhossza">derékhossza<input type="range" min=25 max=48 value=44.5 id="derekhossza"></label>
+<label for="zakohossza">zakóhossza<input type="range" min=70 max=120 value=76 id="zakohossza"></label>
+<label for="hataszelesseg">hátaszélesség<input type="range" min=1 max=79 value=22 id="hataszelesseg"></label>
+<label for="vallszelesseg">vállszélesség<input type="range" min=1 max=200 value=15.5 id="vallszelesseg"></label>
+<label for="ujjahossza">ujjahossza<input type="range" min=0 max=200 value=78 id="ujjahossza"></label>
+<label for="hata_egyensulymeret">háta egyensúlyméret<input type="range" min=10 max=200 value=47 id="hata_egyensulymeret"></label>
+<label for="eleje_egyensulymeret">eleje egyensúlyméret<input type="range" min=10 max=200 value=46 id="eleje_egyensulymeret"></label>
+</pre>
 
 </body>
 <script src="zako.js"></script>
