path a polyline helyett

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@ svg text {
 svg g:hover text {
 	display: block;
 }
+svg path {
+fill:rgba(0,0,0,0.2);
+stroke:rgba(0,0,0,0.2)
+}
 </style>
 
 </head>
