--- a/index.html
+++ b/index.html
@@ -3,15 +3,13 @@
 <head>
 	<meta charset="utf-8">
 
-	<title></title>
+	<title>mondvacsinált</title>
 <!-- Latest compiled and minified CSS -->
-<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">-->
+<link rel="stylesheet" href="bootstrap.min.css">
 
 <!-- Optional theme -->
-<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">-->
+<link rel="stylesheet" href="bootstrap-theme.min.css">
 
-
-<script src="snap.svg.js" type="text/javascript" charset="utf-8"></script>
 
 <style type="text/css" media="all">
 #drawing {
@@ -35,25 +33,12 @@ stroke:rgba(0,0,0,0.2)
 </head>
 <body>
 
-<svg id="drawing" width=800 height=800></svg>
+
+<div id="zako"></div>
+<div id="gombok"></div>
+<div id="gombok2"></div>
 
 
-<div id="a"</div>
-
-<pre>
-<label for="testmagassag">testmagassag <input type="range" min=0 max=200 value=170 id="testmagassag"><span class="value">170</span></label>
-<label for="mellboseg">mellbőség <input type="range" min=80 max=150 value=100 id="mellboseg"><span class="value">100</span></label>
-<label for="derekboseg">derékbőség <input type="range" min=50 max=100 value=88 id="derekboseg"><span class="value">88</span></label>
-<label for="csipoboseg">csípőbőség <input type="range" min=70 max=180 value=106 id="csipoboseg"><span class="value">106</span></label>
-<label for="derekhossza">derékhossza<input type="range" min=25 max=48 value=44.5 id="derekhossza"><span class="value">44.5</span></label>
-<label for="zakohossza">zakóhossza<input type="range" min=70 max=120 value=76 id="zakohossza"><span class="value">76</span></label>
-<label for="hataszelesseg">hátaszélesség<input type="range" min=1 max=79 value=22 id="hataszelesseg"><span class="value">22</span></label>
-<label for="vallszelesseg">vállszélesség<input type="range" min=1 max=200 value=15.5 id="vallszelesseg"><span class="value">15.5</span></label>
-<label for="ujjahossza">ujjahossza<input type="range" min=0 max=200 value=78 id="ujjahossza"><span class="value">78</span></label>
-<label for="hata_egyensulymeret">háta egyensúlyméret<input type="range" min=10 max=200 value=47 id="hata_egyensulymeret"><span class="value">47</span></label>
-<label for="eleje_egyensulymeret">eleje egyensúlyméret<input type="range" min=10 max=200 value=46 id="eleje_egyensulymeret"><span class="value">46</span></label>
-</pre>
-
-</body>
 <script src="bundle.js"></script>
+</body>
 </html>
