--- a/index.html
+++ b/index.html
@@ -12,11 +12,7 @@
 
 
 <style type="text/css" media="all">
-#drawing {
-	height: 100%;
-	width: 50%;
-	fill: #000;
-	stroke: #000;
+svg {
 	float: left;
 }
 pre {
