--- a/index.html
+++ b/index.html
@@ -2,39 +2,25 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 
 	<title>mondvacsinált</title>
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="bootstrap.min.css">
-
-<!-- Optional theme -->
-<link rel="stylesheet" href="bootstrap-theme.min.css">
-
-
-<style type="text/css" media="all">
-svg {
-	float: left;
-}
-pre {
-	float: left;
-
-}
-
-svg path, svg polyline {
-fill:rgba(0,0,0,0.2);
-stroke:rgba(0,0,0,0.2)
-}
-</style>
+<link rel="stylesheet" href="style.css" />
 
 </head>
 <body>
 
 
-<div id="zako"></div>
-<div id="gombok"></div>
-<div id="gombok2"></div>
+<div class="container-fluid">
+	<h1>👔mondvacsinált</h1>
+	<div class="row" id="gombok2"></div>
+</div>
 
 
-<script src="bundle.js"></script>
+
+<script src="build/bundle.js"></script>
 </body>
 </html>
