--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
 <div class="container-fluid">
-	<h1>👔mondvacsinált</h1>
+	<h1>👔mondvacsinált <a href="http://mek.oszk.hu/02100/02115/html/4-1421.html" title="== bespoke! ugye?? imádom ezt a fordítást, teljesen leereszti a sznobériát az egész hashtag menswear körül">*</a></h1>
 	<div class="row" id="gombok2"></div>
 </div>
 
