--- a/index-local.html
+++ b/index-local.html
@@ -7,7 +7,7 @@
 
 	<title>mondvacsinált</title>
 <!-- Latest compiled and minified CSS -->
-<link rel="stylesheet" href="bootstrap.min.css">
+<!--<link rel="stylesheet" href="bootstrap.min.css">-->
 <link rel="stylesheet" href="style.css" />
 
 </head>
