commits from last night dot com

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
 
 <div class="container-fluid">
-	<h1>👔mondvacsinált <a href="http://mek.oszk.hu/02100/02115/html/4-1421.html" title="== bespoke! ugye?? imádom ezt a fordítást, teljesen leereszti a sznobériát az egész hashtag menswear körül">*</a></h1>
 	<div class="row" id="gombok2"></div>
 </div>
 
+<p>figyelem: lehetnek, sőt egészen biztos vannak az eredményt használhatatlanná tevő hibák ezeknek a szerkesztésében!</p>
 
 
 <script src="build/bundle.js"></script>
