update build... mostly

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
 <p>figyelem: lehetnek, sőt egészen biztos vannak az eredményt használhatatlanná tevő hibák ezeknek a szerkesztésében!</p>
 
 
-<script src="build/bundle.js"></script>
+<script src="build/appbundle.js"></script>
 </body>
 </html>
