--- a/index.html
+++ b/index.html
@@ -13,11 +13,9 @@
 <body>
 
 
-<div class="container-fluid">
-	<div class="row" id="gombok2"></div>
+<div id="app">
 </div>
 
-<p>figyelem: lehetnek, sőt egészen biztos vannak az eredményt használhatatlanná tevő hibák ezeknek a szerkesztésében!</p>
 
 
 <script src="build/appbundle.js"></script>
